Update @odh-dashboard/notebooks: fix(ws): filter chip label spacings (#326)
Upstream commit: 273cdc92d255a2b25626fe1b5f314d848bcc7974

--- a/packages/notebooks/upstream/src/shared/style/MUI-theme.scss
+++ b/packages/notebooks/upstream/src/shared/style/MUI-theme.scss
@@ -742,7 +742,6 @@
 .mui-theme .pf-v6-c-label.pf-m-outline {
   --pf-v6-c-label--BorderColor: none;
   --pf-v6-c-label--BackgroundColor: var(--mui-palette-grey-200);
-  padding: 4px;
 }
 
 .mui-theme .pf-v6-c-masthead {
@@ -758,8 +757,6 @@
 
 .mui-theme .pf-v6-c-button.pf-m-plain {
   --pf-v6-c-button--BorderRadius: 50%;
-  --pf-v6-c-button--PaddingInlineStart: none;
-  --pf-v6-c-button--PaddingInlineEnd: none;
 }
 
 .mui-theme .pf-v6-c-page__main-container {
